--- a/ERPWeb/Views/AgroConfiguration/PackageCreate.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/PackageCreate.cshtml
@@ -372,7 +372,7 @@
                 var sl = $("#tblList tbody tr").length;
                 var td1 = "<td class='text-center text-bold'>" + (sl + 1) + "</td>"
                 var td2 = "<td class='text-center'>" + dropDownSelectedText("ddlAccessories") + "</td>";
-                var td3 = "<td class='text-center'>" + dropDownSelectedText("ddlMeasurementName") + "</td>";
+                var td3 = "<td class='text-center'>" + "NA" + "</td>";
                 var td4 = "<td class='text-center'>" + txtQuanityA.val() + "</td>";
                 var td5 = "<td class='text-center'>" + txtTotalAmount.val() + "</td>";
                 var td6 = "<td class='text-center hide'>" + ddlMode.val() + "</td>";
