--- a/ERPWeb/Views/AgroConfiguration/_GetPRProductionPrice.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetPRProductionPrice.cshtml
@@ -25,10 +25,10 @@
             <tr>
                 <td class="text-center">@sl</td>
                 <td class="text-center">@item.RawMaterialName</td>
-                <td class="text-center">@item.FGRRawMaterQty</td>
+                <td class="text-center">@item.FGRRawMaterQty.ToString("0.00")</td>
 
                 <td class="text-center">@item.UnitName</td>
-                <td class="text-center">@item.RMPriceTotal</td>
+                <td class="text-center">@item.RMPriceTotal.ToString("0.00")</td>
 
 
             </tr>
