--- a/ERPWeb/Views/AgroConfiguration/_GetProductionPriceList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetProductionPriceList.cshtml
@@ -26,9 +26,9 @@
 
                 <td class="text-center">@item.FinishGoodProductName</td>
                 <td class="text-center">@item.QtyKG</td>
-                <td class="text-center">@item.PerProductRMtotalCost</td>
-                <td class="text-center">@item.PerProductOtherCost</td>
-                <td class="text-center">@item.PerProductMainCost</td>
+                <td class="text-center">@item.PerProductRMtotalCost.ToString("0.00")</td>
+                <td class="text-center">@item.PerProductOtherCost.ToString("0.00")</td>
+                <td class="text-center">@item.PerProductMainCost.ToString("0.00")</td>
 
             </tr>
         }
