--- a/ERPWeb/Views/AgroConfiguration/_ProductPaymentHistoryDetails.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_ProductPaymentHistoryDetails.cshtml
@@ -29,7 +29,7 @@
                     <tr>
                         @*<td>@sl</td>*@
                         <td class="text-center">@item.EntryDate.Value.ToString("dd-MMM-yyyy")</td>
-                        <td class="text-center">@item.ProductPrice</td>
+                        <td class="text-center">@item.ProductPrice.ToString("0.00")</td>
                         @*<td class="text-center">@item.StockDate.Value.ToString("dd.MMM.yyyy")</td>*@
                         <td class="text-center">@item.UserName</td>
                     </tr>
