--- a/ERPWeb/Views/AgroConfiguration/CreateFinishGoodRecipe.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateFinishGoodRecipe.cshtml
@@ -52,9 +52,9 @@
                             <span class="error hide req-ProductName font-weight-bold">Product Name is required!</span>
                         </div>
                         <div class="col-md-3 pl-0">
-                            <label for="txtQty" class="col-form-label p-0">Product Qty <span style="color:red">*</span><span id="unitName" class="font-weight-bold mt-1" style="color:darkblue"> </span></label>
+                            <label for="txtQty" class="col-form-label p-0">Product Details <span style="color:red">*</span><span id="unitName" class="font-weight-bold mt-1" style="color:darkblue"> </span></label>
                             <input type="number" placeholder="Qty" name="quantity" id="txtProductQty" class="form-control form-control-sm" />
-                            <span class="error hide req-src-Productqty text-bold">ProductQty is required!</span>
+                            <span class="error hide req-src-Productqty text-bold">ProductDetails is required!</span>
                         </div>
                         <div class="col-md-3 pl-0">
                             <label for="ddlUnit" class="col-form-label p-0">Unit Name</label>
