--- a/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
@@ -180,12 +180,12 @@
                                                     <div class="col-md-3 pl-0">
 
                                                         <input type="text" placeholder="Chalan No" id="ddlChallanNo" class="form-control form-control-sm" />
-                                                        <span class="error hide req-ddlChallanNo font-weight-bold">Chalan No is required!</span>
+                                                        @*<span class="error hide req-ddlChallanNo font-weight-bold">Chalan No is required!</span>*@
 
                                                     </div>
                                                     <div class="col-md-3 pl-0 pr-0">
                                                         <input type="text" placeholder="Invoice No" id="ddlInvoiceNo" class="form-control form-control-sm" />
-                                                        <span class="error hide req-ddlInvoiceNo font-weight-bold">Invoice No is required!</span>
+                                                        @*<span class="error hide req-ddlInvoiceNo font-weight-bold">Invoice No is required!</span>*@
                                                     </div>
 
 
