--- a/ERPWeb/Views/AgroConfiguration/SalesCommission.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SalesCommission.cshtml
@@ -187,6 +187,7 @@
         }
 
         $(document).on('click', 'a.data-item-detail', function (e) {
+            debugger;
             e.preventDefault();
             $("#dataContainer2").empty();
             var id = $(this).attr("data-item-detail");
