--- a/ERPWeb/Views/AgroConfiguration/_GetProductWiseSalesReportList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetProductWiseSalesReportList.cshtml
@@ -18,7 +18,7 @@
             <th style="vertical-align:middle">Product Name</th>
             <th style="vertical-align:middle">PackSize</th>
             <th style="vertical-align:middle">QtyCTN</th>
-            <th style="vertical-align:middle">QtyKG</th>
+            @*<th style="vertical-align:middle">QtyKG</th>*@
             <th style="vertical-align:middle">Total</th>
             @*<th style="vertical-align:middle">Action</th>*@
         </tr>
@@ -35,7 +35,7 @@
                 <td class="text-center">@item.FinishGoodProductName</td>
                 <td class="text-center">@item.PackSize</td>
                 <td class="text-center">@item.QtyCTN</td>
-                <td class="text-center">@item.QtyKG</td>
+                @*<td class="text-center">@item.QtyKG</td>*@
                 <td class="text-center">@item.Total</td>
                 
                 
