--- a/ERPWeb/Reports/ERPRpt/Agriculture/ProductwisesalesReportDownloadsReport.rdlc
+++ b/ERPWeb/Reports/ERPRpt/Agriculture/ProductwisesalesReportDownloadsReport.rdlc
@@ -107,13 +107,10 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>1.025in</Width>
+              <Width>1.11875in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.025in</Width>
-            </TablixColumn>
-            <TablixColumn>
-              <Width>1.025in</Width>
+              <Width>1.06667in</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -129,7 +126,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>TotalQty</Value>
+                              <Value>Total Qty</Value>
                               <Style>
                                 <FontWeight>Bold</FontWeight>
                               </Style>
@@ -141,41 +138,6 @@
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox27</rd:DefaultName>
-                      <Style>
-                        <Border>
-                          <Color>LightGrey</Color>
-                          <Style>Solid</Style>
-                        </Border>
-                        <BackgroundColor>Gainsboro</BackgroundColor>
-                        <PaddingLeft>2pt</PaddingLeft>
-                        <PaddingRight>2pt</PaddingRight>
-                        <PaddingTop>2pt</PaddingTop>
-                        <PaddingBottom>2pt</PaddingBottom>
-                      </Style>
-                    </Textbox>
-                  </CellContents>
-                </TablixCell>
-                <TablixCell>
-                  <CellContents>
-                    <Textbox Name="Textbox29">
-                      <CanGrow>true</CanGrow>
-                      <KeepTogether>true</KeepTogether>
-                      <Paragraphs>
-                        <Paragraph>
-                          <TextRuns>
-                            <TextRun>
-                              <Value>TotalQty</Value>
-                              <Style>
-                                <FontWeight>Bold</FontWeight>
-                              </Style>
-                            </TextRun>
-                          </TextRuns>
-                          <Style>
-                            <TextAlign>Center</TextAlign>
-                          </Style>
-                        </Paragraph>
-                      </Paragraphs>
-                      <rd:DefaultName>Textbox29</rd:DefaultName>
                       <Style>
                         <Border>
                           <Color>LightGrey</Color>
@@ -264,38 +226,6 @@
                 </TablixCell>
                 <TablixCell>
                   <CellContents>
-                    <Textbox Name="QtyKG1">
-                      <CanGrow>true</CanGrow>
-                      <KeepTogether>true</KeepTogether>
-                      <Paragraphs>
-                        <Paragraph>
-                          <TextRuns>
-                            <TextRun>
-                              <Value>=Fields!QtyKG.Value</Value>
-                              <Style />
-                            </TextRun>
-                          </TextRuns>
-                          <Style>
-                            <TextAlign>Center</TextAlign>
-                          </Style>
-                        </Paragraph>
-                      </Paragraphs>
-                      <rd:DefaultName>QtyKG1</rd:DefaultName>
-                      <Style>
-                        <Border>
-                          <Color>LightGrey</Color>
-                          <Style>Solid</Style>
-                        </Border>
-                        <PaddingLeft>2pt</PaddingLeft>
-                        <PaddingRight>2pt</PaddingRight>
-                        <PaddingTop>2pt</PaddingTop>
-                        <PaddingBottom>2pt</PaddingBottom>
-                      </Style>
-                    </Textbox>
-                  </CellContents>
-                </TablixCell>
-                <TablixCell>
-                  <CellContents>
                     <Textbox Name="Total1">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
@@ -369,42 +299,6 @@
                 </TablixCell>
                 <TablixCell>
                   <CellContents>
-                    <Textbox Name="Textbox78">
-                      <CanGrow>true</CanGrow>
-                      <KeepTogether>true</KeepTogether>
-                      <Paragraphs>
-                        <Paragraph>
-                          <TextRuns>
-                            <TextRun>
-                              <Value>=Sum(Fields!QtyKG.Value)</Value>
-                              <Style>
-                                <FontWeight>Bold</FontWeight>
-                                <Color>White</Color>
-                              </Style>
-                            </TextRun>
-                          </TextRuns>
-                          <Style>
-                            <TextAlign>Center</TextAlign>
-                          </Style>
-                        </Paragraph>
-                      </Paragraphs>
-                      <rd:DefaultName>Textbox76</rd:DefaultName>
-                      <Style>
-                        <Border>
-                          <Color>LightGrey</Color>
-                          <Style>Solid</Style>
-                        </Border>
-                        <BackgroundColor>Green</BackgroundColor>
-                        <PaddingLeft>2pt</PaddingLeft>
-                        <PaddingRight>2pt</PaddingRight>
-                        <PaddingTop>2pt</PaddingTop>
-                        <PaddingBottom>2pt</PaddingBottom>
-                      </Style>
-                    </Textbox>
-                  </CellContents>
-                </TablixCell>
-                <TablixCell>
-                  <CellContents>
                     <Textbox Name="Textbox82">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
@@ -445,7 +339,6 @@
         </TablixBody>
         <TablixColumnHierarchy>
           <TablixMembers>
-            <TablixMember />
             <TablixMember />
             <TablixMember />
           </TablixMembers>
@@ -492,7 +385,7 @@
               <TablixMembers>
                 <TablixMember>
                   <TablixHeader>
-                    <Size>2.46194in</Size>
+                    <Size>2.65986in</Size>
                     <CellContents>
                       <Textbox Name="Textbox33">
                         <CanGrow>true</CanGrow>
@@ -530,7 +423,7 @@
                   <TablixMembers>
                     <TablixMember>
                       <TablixHeader>
-                        <Size>1.11875in</Size>
+                        <Size>1.7889in</Size>
                         <CellContents>
                           <Textbox Name="Textbox88">
                             <CanGrow>true</CanGrow>
@@ -539,7 +432,7 @@
                               <Paragraph>
                                 <TextRuns>
                                   <TextRun>
-                                    <Value>Pack Size</Value>
+                                    <Value>Package  Size</Value>
                                     <Style>
                                       <FontWeight>Bold</FontWeight>
                                     </Style>
@@ -621,7 +514,7 @@
               <TablixMembers>
                 <TablixMember>
                   <TablixHeader>
-                    <Size>2.46194in</Size>
+                    <Size>2.65986in</Size>
                     <CellContents>
                       <Textbox Name="FinishGoodProductName11">
                         <CanGrow>true</CanGrow>
@@ -666,7 +559,7 @@
                         </SortExpression>
                       </SortExpressions>
                       <TablixHeader>
-                        <Size>1.11875in</Size>
+                        <Size>1.7889in</Size>
                         <CellContents>
                           <Textbox Name="PackSize11">
                             <CanGrow>true</CanGrow>
@@ -744,7 +637,7 @@
               <TablixMembers>
                 <TablixMember>
                   <TablixHeader>
-                    <Size>2.46194in</Size>
+                    <Size>2.65986in</Size>
                     <CellContents>
                       <Textbox Name="Textbox90">
                         <CanGrow>true</CanGrow>
@@ -778,7 +671,7 @@
                   <TablixMembers>
                     <TablixMember>
                       <TablixHeader>
-                        <Size>1.11875in</Size>
+                        <Size>1.7889in</Size>
                         <CellContents>
                           <Textbox Name="Textbox91">
                             <CanGrow>true</CanGrow>
@@ -826,7 +719,7 @@
         <Top>1.20361in</Top>
         <Left>0.21875in</Left>
         <Height>0.75in</Height>
-        <Width>7.12444in</Width>
+        <Width>7.10292in</Width>
         <ZIndex>3</ZIndex>
         <Style>
           <Border>
